Updating with video code

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href="styles.css" rel="stylesheet">
+  <script src="script.js" async></script>
   <title>Mix-Or-Match</title>
 </head>
 
